2006-03-20 Added support for masking values with nan's, using ADS's
           isnan module and the new API. Works for *Agg backends and
           the postscript backend- DSD

2006-03-20 Added contour.negative_linestyle rcParam - ADS

2006-03-20 Added _isnan extension module to test for nan with Numeric 
	   - ADS

2006-03-17 Added Paul and Alex's support for faceting with quadmesh
           in sf patch 1411223 - JDH

2006-03-17 Added Charle Twardy's pie patch to support colors=None.
           Closes sf patch 1387861 - JDH

2006-03-17 Applied sophana's patch to support overlapping axes with
           toolbar navigation by toggling activation with the 'a' key.
           Closes sf patch 1432252 - JDH

2006-03-17 Applied Aarre's linestyle patch for backend EMF; closes sf
           patch 1449279 - JDH

2006-03-17 Applied  Jordan Dawe's patch to support kwarg properties
           for grid lines in the grid command.  Closes sf patch
           1451661 - JDH

2006-03-17 Center postscript output on page when using usetex - DSD

2006-03-17 subprocess module built if Python <2.4 even if subprocess
           can be imported from an egg - ADS

2006-03-17 Added _subprocess.c from Python upstream and hopefully
           enabled building (without breaking) on Windows, although
           not tested. - ADS

2006-03-17 Updated subprocess.py to latest Python upstream and
           reverted name back to subprocess.py - ADS

2006-03-16 Added John Porter's 3D handling code


===============================================================
2006-03-16 Released 0.87.2 at revision 2150

2006-03-15 Fixed bug in MaxNLocator revealed by daigos@infinito.it.
           The main change is that Locator.nonsingular now adjusts
           vmin and vmax if they are nearly the same, not just if
           they are equal.  A new kwarg, "tiny", sets the threshold. -
           EF

2006-03-14 Added import of compatibility library for newer numpy
           linear_algebra - TEO
