@@ -6,7 +6,7 @@ exist in matlab(TM) but have proven themselves to be useful nonetheless.
 The majority of them, however, have matlab analogs
 
 _Plotting commands
-
+  arrow     - add an arrow to the axes
   axes      - Create a new axes
   axhline   - draw a horizontal line across axes
   axvline   - draw a vertical line across axes
@@ -1541,6 +1541,27 @@ def box(on=None):
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
 # changes will be lost
+def arrow(*args, **kwargs):
+    # allow callers to override the hold state by passing hold=True|False
+    b = ishold()
+    h = popd(kwargs, 'hold', None)
+    if h is not None:
+        hold(h)
+    try:
+        ret =  gca().arrow(*args, **kwargs)
+        draw_if_interactive()
+    except:
+        hold(b)
+        raise
+    
+    hold(b)
+    return ret
+if Axes.arrow.__doc__ is not None:
+    arrow.__doc__ = _shift_string(Axes.arrow.__doc__) + """
+Addition kwargs: hold = [True|False] overrides default hold state"""
+
+# This function was autogenerated by boilerplate.py.  Do not edit as
+# changes will be lost
 def axhline(*args, **kwargs):
     # allow callers to override the hold state by passing hold=True|False
     b = ishold()
@@ -1553,7 +1574,7 @@ def axhline(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.axhline.__doc__ is not None:
@@ -1574,7 +1595,7 @@ def axhspan(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.axhspan.__doc__ is not None:
@@ -1595,7 +1616,7 @@ def axvline(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.axvline.__doc__ is not None:
@@ -1616,7 +1637,7 @@ def axvspan(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.axvspan.__doc__ is not None:
@@ -1637,7 +1658,7 @@ def bar(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.bar.__doc__ is not None:
@@ -1658,13 +1679,12 @@ def barh(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.barh.__doc__ is not None:
     barh.__doc__ = _shift_string(Axes.barh.__doc__) + """
 Addition kwargs: hold = [True|False] overrides default hold state"""
-
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
 # changes will be lost
@@ -1680,7 +1700,7 @@ def boxplot(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.boxplot.__doc__ is not None:
@@ -1701,7 +1721,7 @@ def cohere(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.cohere.__doc__ is not None:
@@ -1722,6 +1742,7 @@ def clabel(*args, **kwargs):
     except:
         hold(b)
         raise
+    
     hold(b)
     return ret
 if Axes.clabel.__doc__ is not None:
@@ -1784,7 +1805,7 @@ def csd(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.csd.__doc__ is not None:
@@ -1805,7 +1826,7 @@ def errorbar(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.errorbar.__doc__ is not None:
@@ -1826,7 +1847,7 @@ def fill(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.fill.__doc__ is not None:
@@ -1847,7 +1868,7 @@ def hist(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.hist.__doc__ is not None:
@@ -1868,7 +1889,7 @@ def hlines(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.hlines.__doc__ is not None:
@@ -1910,7 +1931,7 @@ def loglog(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.loglog.__doc__ is not None:
@@ -1952,7 +1973,7 @@ def pcolormesh(*args, **kwargs):
     except:
         hold(b)
         raise
-    gci._current = ret
+    
     hold(b)
     return ret
 if Axes.pcolormesh.__doc__ is not None:
@@ -1973,7 +1994,7 @@ def pcolor_classic(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.pcolor_classic.__doc__ is not None:
@@ -1994,7 +2015,7 @@ def pie(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.pie.__doc__ is not None:
@@ -2015,7 +2036,7 @@ def plot(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.plot.__doc__ is not None:
@@ -2036,7 +2057,7 @@ def plot_date(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.plot_date.__doc__ is not None:
@@ -2057,7 +2078,7 @@ def psd(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.psd.__doc__ is not None:
@@ -2099,7 +2120,7 @@ def scatter_classic(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.scatter_classic.__doc__ is not None:
@@ -2120,7 +2141,7 @@ def semilogx(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.semilogx.__doc__ is not None:
@@ -2141,7 +2162,7 @@ def semilogy(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.semilogy.__doc__ is not None:
@@ -2183,7 +2204,7 @@ def spy(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.spy.__doc__ is not None:
@@ -2225,7 +2246,7 @@ def stem(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.stem.__doc__ is not None:
@@ -2246,7 +2267,7 @@ def vlines(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.vlines.__doc__ is not None:
@@ -2267,7 +2288,7 @@ def quiver(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.quiver.__doc__ is not None:
