@@ -1,3 +1,5 @@
+2006-03-21 Added Rob Knight's arrow code; see examples/arrow_demo.py - JDH
+
 2006-03-20 Added support for masking values with nan's, using ADS's
            isnan module and the new API. Works for *Agg backends and
            the postscript backend- DSD
